[+] se hace el menu despegable en el index.html y se crea el repositorio de github

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         </li>
                         <li><a href="#">Ventas</a>
                             <ul>        
-                                <li><a href="#">Repuesto Original</a></li>
-                                <li><a href="#">Repuesto Generico</a></li>
-                                <li><a href="#">Accesorio</a></li>
+                                <li><a href="#">Repuestos Original</a></li>
+                                <li><a href="#">Repuestos Generico</a></li>
+                                <li><a href="#">Accesorios</a></li>
                             </ul>
                         <li><a href="#">Contactos</a>
                         </li>
